Minor comments and test cases